samples/_failures_safe/1761342673_c8b769_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_427f0416.c: In function ‘main’:
./samples/SAFE/__tmp_427f0416.c:158:34: error: expected ‘)’ at end of input
  158 |                 } else if (status
      |                           ~      ^
      |                                  )
./samples/SAFE/__tmp_427f0416.c:158:17: error: expected declaration or statement at end of input
  158 |                 } else if (status
      |                 ^
./samples/SAFE/__tmp_427f0416.c:158:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_427f0416.c:158:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_427f0416.c:158:17: error: expected declaration or statement at end of input
